# trevisorifiuti.top

./: CLAUDE.md  CNAME  README.md  index.html  pyproject.toml  scrape.py  sitemap.xml  sw.js  tvtrash.code-workspace
.github/workflows/: ci.yml  deploy-frontend.yml  deploy-infrastructure.yml  deploy-to-supabase.yml  scrape.yml
assets/: index-5QaNNprX.js  index-Bf8f0zPa.js  index-CNcJLqc9.js  index-G1pdHVab.css  index-XFEIxaN_.js
docs/assets/: application-flow.excalidraw
frontend/: README.md  index.html  local.env  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Auth.tsx  Counter.tsx  config.ts  index.css  index.tsx
frontend/src/app/: app.tsx  auth.tsx  index.css  index.tsx
frontend/src/app/context/: auth.tsx  config.tsx  i18n.tsx  supabase.tsx  theme.tsx
frontend/src/app/routes/: account.tsx  auth.tsx  calendar.tsx  counter.tsx  municipalities.tsx  notFound.tsx  root.tsx
frontend/src/components/: seo.tsx
frontend/src/components/layout/: floatingActionButtons.tsx  footer.tsx  navbar.tsx
frontend/src/components/ui/: Button.tsx  Navbar.tsx  button.tsx  footer.tsx  navbar.tsx  select.tsx  spinner.tsx  table.tsx
frontend/src/entities/: common.ts  waste.ts
frontend/src/features/calendar/: index.ts
frontend/src/i18n/: dictionaries.ts
frontend/src/municipalities/: Municipalities.tsx
frontend/src/routes/: index.tsx
frontend/src/supabase/: account.ts  auth.ts  database.types.ts  index.ts
frontend/test/: Counter.test.tsx  helpers.tsx
frontend/test/supabase/: account.test.ts  index.test.ts
infrastructure/: .gitignore  .terraform.lock.hcl  README.md  data.tf  example.env  main.tf  providers.tf  terraform.tfvars  vars.tf
infrastructure/state/: terraform.tfstate  terraform.tfstate.backup
scraper/: Makefile  README.md  pyproject.toml  scrape.py
scraper/scraper/: config.py
scraper/scraper/adapters/: __init__.py  db.py  supabase.py
scraper/scraper/domains/waste/: collection_schedule.py  collection_schedule_repository.py  municipality.py  municipality_repository.py
scraper/scraper/entities/: municipality.py  waste.py
scraper/scraper/services/: __init__.py  collection_schedules.py  municipality.py
scraper/scraper/tests/: test_main.py
scraper/scraper/tests/domains/waste/: test_collection_schedule_repository.py  test_municipality_repository.py
scraper/scraper/tests/services/: test_collection_schedule.py  test_municipality.py
supabase/: .env.local  README.md  biome.json  package.json  pnpm-lock.yaml
supabase/supabase/: config.toml
supabase/supabase/migrations/: 20250223183441_create_schema_tvtrash.sql  20250223183441_schema_tvtrash.sql  20251028165800_enable_rls_and_policies.sql  20251107155500_create_schema_tvtrash.sql  20251107173700_add_user_registration_trigger.sql  20251107173700_update_notification_preferences_trigger.sql
supabase/supabase/seeds/: 20250814151000_insert_notification_types.sql
supabase/supabase/templates/: magiclink.html
tvtrashtomorrow/: scrape.py
tvtrashtomorrow/entities/: comune.py  svuotamento.py
(+41 files in other folders)
