[project]
name = "tvtrashtomorrow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
# Assume Python 3.11
target-version = "py312"

[tool.ruff.lint]
ignore = ["E402"]

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20241020",
]
