[project]
name = "scraper"
version = "0.1.0"
description = "Scrape the Contarina website to get the waste collection schedule."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "pydantic-settings>=2.7.1",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py312"
fix = true

[tool.ruff.lint]
ignore = ["E402"]

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.9.4", "types-beautifulsoup4>=4.12.0.20241020"]
